--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">MasterDetail</string>
+    <string name="app_name">CamClient</string>
     <string name="title_item_detail">Item Detail</string>
 </resources>
