Using real acm image api data

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,9 @@
 <resources>
     <string name="app_name">CamClient</string>
     <string name="title_item_detail">Item Detail</string>
+    <string name="show_timestamp">show_timestamp</string>
+    <string name="date_time">Date/time:</string>
+    <string name="delete_image">Delete image</string>
+    <string name="ip">IP</string>
+    <string name="show_ip">show_ip</string>
 </resources>
